--- a/best_movie_style.css
+++ b/best_movie_style.css
@@ -2,6 +2,7 @@
     --primary-color: rgb(134, 42, 42);
     --secondary-color: rgb(161, 132, 69);
     --tertiary-color: rgb(62, 73, 58);
+    --quarternary-color: rgb(10, 100, 58);
     --border-value: 0.25em solid black;    
 }
 
@@ -62,3 +63,4 @@ h3 {
 #best-movie--image {
     grid-column: 10/12;
 }
+
