--- a/best_movie_style.css
+++ b/best_movie_style.css
@@ -25,8 +25,12 @@ h3 {
     margin-left: 10vw;
 }
 
+.top-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 
-/* if needed, here should come a main selector */
 
 #box {
     display:flex;
