--- a/best_movie_style.css
+++ b/best_movie_style.css
@@ -45,34 +45,28 @@ h3 {
 }
 
 .best-movie {
-    display: grid;
     height: 37vh;
     width: 60vw;
     border: var(--border-value);
-    grid-template-rows: 200px;
-    grid-gap: 3px;
     margin:1em 15vw;
+    overflow: hidden;
 }
 
 #best-movie--title {
     border: var(--border-value);
-    grid-row: 1;
     font-weight: 900;
     padding: 1em; 
     border: transparent;
-
 }
 
 #best-movie--button {
     border:var(--border-value);
-    grid-row:2;
     padding: 1em;
     border:transparent;
 }
 
 #best-movie--summary {
     border: var(--border-value);
-    grid-row: 3/5;
     padding: 1em;
     border: transparent;
 }
