--- a/best_movie_style.css
+++ b/best_movie_style.css
@@ -31,8 +31,7 @@ h3 {
     justify-content: space-around;
 }
 
-
-#box {
+.box {
     display:flex;
     border: var(--border-value);
     border-radius: 1em;
